sandc/test/fixtures/pbtRegression/shouldSucceed/unnamedPackage/Bar.sand
pub class Bar {
    pub left: Foo?;
    pub middle: Bar?;
    pub right: Baz?;
}