sandc/test/fixtures/pbtRegression/shouldFail/propShadowing/Foo.sand
pub class Foo {
    sand: int;
}